# rscv

./: Cargo.toml
src/: cv.rs  lib.rs  main.rs
src/core/: cv.rs  mod.rs
src/cv/: img.rs  mod.rs  win.rs
src/one/: mod.rs  vary.rs  win.rs
tests/: core_test.rs
