[package]
name = "rscv"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "rust cv"
documentation = "https://docs.rs/rscv"
repository = "https://github.com/itooling/rscv"


[lib]
crate-type = ["lib", "cdylib"]


[dependencies]
image = "0.25.2"
minifb = "0.27.0"
pixels = "0.13.0"
rand = "0.8.5"
winit = "0.30.5"
